--- a/tex/context/sample/common/samples.tex
+++ b/tex/context/sample/common/samples.tex
@@ -62,6 +62,9 @@ used in testing bibliographic references and citations.
 \NC poe.tex            \NC Edgar Allan Poe       \NC A dream within a dream, www.poetryfoundation.org. \NC \NR
 \NC gray.tex           \NC John Gray             \NC https://www.theguardian.com/books/2008/mar/15/society \NC \NR
 \NC dijkstra.tex       \NC Edsger Dijkstra       \NC \NC \NR
+\NC janyes.tex         \NC Julian Jaynes         \NC The origin of consciousness in the break down of the
+                                                     bicameral mind,
+                                                     Houghton Mifflin, Princeton, 1976 \NC \NR
 \stoptabulate
 
 % Tufte: This quote will always produce hyphenated text, apart from the content,
