--- a/doc/context/sources/general/manuals/interaction/interaction-widgets.tex
+++ b/doc/context/sources/general/manuals/interaction/interaction-widgets.tex
@@ -526,7 +526,7 @@ choice \type{awful}. Just in case one wonders why we use
 shows what value will be output.
 
 \startbuffer[uglies]
-\definefieldset [AllUglies] [Ugly, Ugly2, Ugly3]
+\definefieldbodyset [AllUglies] [Ugly, Ugly2, Ugly3]
 \stopbuffer
 
 \getbuffer[uglies]
