--- a/doc/context/sources/general/manuals/luametatex/luametatex-principles.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex-principles.tex
@@ -4,7 +4,7 @@
 
 \startdocument[title=principles]
 
-\startsection[title={Introduction}]
+\startsection[title=Introduction]
 
 This is a bit odd manual but needed anyway. In the process of adding features to
 \LUAMETATEX\ and adapting \CONTEXT\ accordingly some decisions were made. On the
@@ -376,6 +376,9 @@ that they have more properties.
 \stopsection
 
 \startsection[title=Language]
+
+{\em todo}
+
 \stopsection
 
 \startsection[title=Math]
@@ -485,7 +488,7 @@ penalty here.
 
 \stopsection
 
-\startsection[title=conditions]
+\startsection[title=Conditions]
 
 We already had more conditionals in \LUATEX\ but again the repertoire of
 conditionals has been extended. This permits us to remove some middle-layer
@@ -498,7 +501,7 @@ or \type {else if}.
 
 \stopsection
 
-\startsection[title=macros]
+\startsection[title=Macros]
 
 Expanding macros happens a lot especially in a more complex macro package. This
 means that adding features in that area can have a large impact on runtime.
@@ -694,6 +697,12 @@ skip is seen as content.
 \stopsection
 
 \startsection[title=Hooks]
+
+{\em todo}
+
+\stopsection
+
+\startsection[title=Expressions]
 
 {\em todo}
 
