--- a/tex/context/sample/common/samples.tex
+++ b/tex/context/sample/common/samples.tex
@@ -1,3 +1,5 @@
+\usemodule[article-basic]
+
 \starttext
 
 The sample directory contains a few files with quotes that can be used
@@ -60,11 +62,12 @@ used in testing bibliographic references and citations.
                                                      their mark on the brain,
                                                      Rider, London, 2014. \NC \NR
 \NC poe.tex            \NC Edgar Allan Poe       \NC A dream within a dream, www.poetryfoundation.org. \NC \NR
-\NC gray.tex           \NC John Gray             \NC https://www.theguardian.com/books/2008/mar/15/society \NC \NR
+\NC gray.tex           \NC John Gray             \NC \hyphenatedurl{https://www.theguardian.com/books/2008/mar/15/society} \NC \NR
 \NC dijkstra.tex       \NC Edsger Dijkstra       \NC \NC \NR
 \NC janyes.tex         \NC Julian Jaynes         \NC The origin of consciousness in the break down of the
                                                      bicameral mind,
                                                      Houghton Mifflin, Princeton, 1976 \NC \NR
+\NC zelensky.tex       \NC Volodymyr Zelensky    \NC \hyphenatedurl{https://graciousquotes.com/volodymyr-zelensky/} \NC \NR
 \stoptabulate
 
 % Tufte: This quote will always produce hyphenated text, apart from the content,
