--- a/doc/context/sources/general/manuals/luametafun/luametafun.tex
+++ b/doc/context/sources/general/manuals/luametafun/luametafun.tex
@@ -45,6 +45,7 @@
         \component luametafun-groups
         \component luametafun-potrace
         \component luametafun-extensions
+        \component luametafun-bytemaps
         \component luametafun-interface
 %         \component luametafun-synchronizers
     \stopbodymatter
